--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/mime-types": "^2.1.4",
 		"@types/minimist": "^1.2.5",
 		"@types/node": "^22.1.0",
+		"@types/pako": "^2.0.3",
 		"@types/parquetjs": "^0.10.3",
 		"@types/sbd": "^1.0.5",
 		"@types/uuid": "^9.0.8",
@@ -89,9 +90,11 @@
 		"lint-staged": "^15.2.7",
 		"marked": "^12.0.1",
 		"marked-katex-extension": "^5.0.1",
+		"mermaid": "^11.3.0",
 		"mongodb": "^5.8.0",
 		"nanoid": "^4.0.2",
 		"openid-client": "^5.4.2",
+		"pako": "^2.1.0",
 		"parquetjs": "^0.11.2",
 		"pino": "^9.0.0",
 		"pino-pretty": "^11.0.0",
